added text flair

--- a/three.html
+++ b/three.html
@@ -7,9 +7,39 @@ title:  Page Three
 
 
 <p>
-Yet another sample page.
+Yet another sample page. Yet another hiaku?
 </p>
 
-<p><em>Add your text here</em></p>
+<p><em>Nope. Try this recipe out instead:</em></p>
 
+<p><strong>Marinade Ingrediants:</strong>
+<ul>
+  <li>1/4 teaspoon sea salt</li>
+  <li>1/4 teaspoon black pepper OR lemon pepper</li>
+  <li>1/2 teaspoon ground cumin</li>
+  <li>1/2 teaspoon or garlic paste OR 1 large garlic clove</li>
+  <li>1/2 teaspoon of lemongrass paste OR another clove of garlic</li>
+  <li>1 heaping teaspoon of gochugaru (Korean dried red pepper flakes)</li>
+  <li>1 heaping teaspoon of gochujang (Korean hot red pepper paste)</li>
+  <li>2.5 teaspoons of honey-vanilla Greek yogurt OR 1.5 teaspoons of plain Greek yogurt and 1 teaspoon honey</li>
+  <li>drizzle of seasame oil</li>
+</ul></p>
 
+<p><strong>Other Ingrediants:</strong>
+  <ul>
+    <li>6 chicken breasts chopped into bite sized pieces</li>
+</ul></p>
+
+<p><strong>Making the Marinade:</strong>
+  In a large bowl combine marinade ingrediants. Add just enough sesame oil to loosen it up a bit, but not too much --it should still have a fairly pastey consistency.
+
+Add in the chopped up chicken and toss --the water in the chicken bits will help the marinade cover the chicken. Cover with seran wrap and let sit overnight.
+</p>
+
+<p><strong>Cooking the Chicken</strong>
+  Heat oven to 400 degrees on baking mode with the wire rack on the fourth rung. Place the other wire rack on the top rung so it is out of the way or remove from the oven completely.
+
+Cover a baking sheet with aluminum foil and dump the chicken and marinade mixture in the center. Spread the chicken and excess marinade evenly on the sheet; don't clean up the excess as it will help the chicken stay moist and juicy while baking. 
+
+Bake for about 20 to 30 minutes, or until the chicken and marinade begin to char.
+</p>
