attempt to fix text flair spacing and paragraph issues

--- a/three.html
+++ b/three.html
@@ -30,14 +30,14 @@ Yet another sample page. Yet another hiaku?
     <li>6 chicken breasts chopped into bite sized pieces</li>
 </ul></p>
 
-<p><strong>Making the Marinade:</strong>
-  In a large bowl combine marinade ingrediants. Add just enough sesame oil to loosen it up a bit, but not too much --it should still have a fairly pastey consistency.
+<p><strong>Making the Marinade:</strong></p>
+<p>In a large bowl combine marinade ingrediants. Add just enough sesame oil to loosen it up a bit, but not too much --it should still have a fairly pastey consistency.
 
 Add in the chopped up chicken and toss --the water in the chicken bits will help the marinade cover the chicken. Cover with seran wrap and let sit overnight.
 </p>
 
-<p><strong>Cooking the Chicken</strong>
-  Heat oven to 400 degrees on baking mode with the wire rack on the fourth rung. Place the other wire rack on the top rung so it is out of the way or remove from the oven completely.
+<p><strong>Cooking the Chicken</strong></p>
+<p>Heat oven to 400 degrees on baking mode with the wire rack on the fourth rung. Place the other wire rack on the top rung so it is out of the way or remove from the oven completely.
 
 Cover a baking sheet with aluminum foil and dump the chicken and marinade mixture in the center. Spread the chicken and excess marinade evenly on the sheet; don't clean up the excess as it will help the chicken stay moist and juicy while baking. 
 
